--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -22,6 +22,14 @@
   </tr>
   <tr>
     <td colspan="2" align="right">
+      <strong><%= t "supplier.website" %>:</strong>
+    </td>
+    <td align="left">
+      <%= auto_link_urls @supplier.website %>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2" align="right">
       <strong><%= t"supplier.active" %></strong>
     </td>
     <td align="left">
