--- a/app/views/work_orders/edit.html.erb
+++ b/app/views/work_orders/edit.html.erb
@@ -1,16 +1,42 @@
 <h1>Editing work_order</h1>
 
-<% form_for(@work_order) do |f| %>
-  <%= f.error_messages %>
+<div id="top_float_right">
+   <%= link_to(image_tag('close.png', :title => [t "global.close"]), work_orders_path) %>&nbsp;<%= link_to([t "global.close"], work_orders_path) %><%= link_to(image_tag('close.png', :title => [t "global.close"]), close_workorder_path) %>&nbsp;<%= link_to([t "global.close"], close_workorder_path) %>
+</div>
 
-  <p>
-    <%= f.label :workorder_id %><br />
-    <%= f.text_field :workorder_id %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
+<div id="ddtabs1" class="basictab">
+<ul>
+<li><a href="#<%= t "workorder.tab_menu_basic_name"  %>" rel="sc1"><%= (t "workorder.tab_menu_basic") %></a></li>
+<li><a href="#<%= t "workorder.tab_menu_resolution"  %>" rel="sc2"><%= (t "workorder.tab_menu_resolution") %></a></li>
+</ul>
+</div>
+
+<div class="tabcontainer">
+
+<div id="sc1" class="tabcontent">
+
+<% semantic_form_for(@work_order) do |f| %>
+      <% f.inputs do %>
+        <%= f.input :subject, :label => (t "workorder.subject") %>
+        <%= f.input :description, :label => (t "workorder.details") %>
+        <%= f.input :priority_list, :label => (t "workorder.priority") %>
+        <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.id} %>
+        <%= f.input :updated_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
+      <% end %>
+<%= f.buttons %>
 <% end %>
+</div>
+<div id="sc2" class="tabcontent">
 
-<%= link_to 'Show', @work_order %> |
-<%= link_to 'Back', work_orders_path %>
+<% semantic_form_for(@work_order) do |f| %>
+      <% f.inputs do %>
+        <%= f.input :resolution, :label => (t "workorder.resolution") %>
+        <%= f.input :closed, :label => (t "workorder.details") %>
+        <%= f.input :priority_list, :label => (t "workorder.priority") %>
+        <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.id} %>
+        <%= f.input :updated_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
+      <% end %>
+<%= f.buttons %>
+<% end %>
+</div>
+</div>
