--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -16,14 +16,38 @@
 
 <% @new_work_orders.each do |new_wo| %>
       <!--mytodo - add row color shading by css and based on priority-->
-  <tr align="left" class="<%= :css_class %>">
+  <tr align="left"
+      <% if new_wo.priority_list_id == 1 %>
+          class="priority_low"
+        <% else %>
+    <% if new_wo.priority_list_id == 2 %>
+          class="priority_normal"
+       <% else %>
+      <% if new_wo.priority_list_id == 3 %>
+          class="priority_high"
+      <% else %>
+  <% if new_wo.priority_list_id == 4 %>
+          class="priority_urgent"
+      <% else %>
+ <% if new_wo.priority_list_id == 5 %>
+          class="priority_critical"
+      <% else %>
+  <% if new_wo.priority_list_id > 5 %>
+      class=""
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+       >
     <td><%= link_to(new_wo.id, new_wo) %></td>
     <td><%=h new_wo.subject %></td>
     <td><%=h new_wo.description %></td>
     <td><%=h new_wo.priority_list.name %></td>
-    <td><%=h new_wo.created_at %></td>
+    <td><%=h l new_wo.created_at, :format => :medium %></td>
     <td><%=h new_wo.created_by %></td>
-    <td><%=h new_wo.updated_at %></td>
+    <td><%=h l new_wo.updated_at, :format => :medium %></td>
     <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(new_wo.id) )%>
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(new_wo.id)) %>
         <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), work_order_path(new_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
@@ -31,5 +55,3 @@
   </tr>
 <% end %>
 </table>
-
-<br />
