--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <title> <%= t "global.program_name" %> <% if @title.blank? %><% else %>| <%= @title %><% end %></title>
 
   <%= stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', 'ddtabmenu', :cache => "base" %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag :all %>
   <script type="text/javascript">
 ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu with ID "ddtabs1" and select 1st tab by default
 
