--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -1,7 +1,12 @@
 <!-- mytodo - add I18n labels and names-->
 
-<h1>Listing work_orders</h1>
-<table id="index_table" >
+<h1>New Work Orders</h1>
+
+<div id="top_float_right">
+  <%= link_to(image_tag('add.png',:title => [t "workorder.t_add_new"]), new_work_order_path) %><%= link_to [t "workorder.t_add_new"], new_work_order_path %>
+</div>
+<div id=index_table>
+<table >
   <tr>
     <th><%= "WO #" %></th>
     <th><%= "Subject" %></th>
@@ -10,12 +15,10 @@
     <th><%= "Created at" %></th>
     <th><%= "Created by" %></th>
     <th><%= "Last Updated" %></th>
-    <th><%= "Actions" %></th>
+    <th><%= "Actions" %></th> 
   </tr>
 
-
 <% @new_work_orders.each do |new_wo| %>
-      <!--mytodo - add row color shading by css and based on priority-->
   <tr align="left"
       <% if new_wo.priority_list_id == 1 %>
           class="priority_low"
@@ -46,7 +49,7 @@
     <td><%=h new_wo.description %></td>
     <td><%=h new_wo.priority_list.name %></td>
     <td><%=h l new_wo.created_at, :format => :medium %></td>
-    <td><%=h new_wo.created_by %></td>
+    <td><%=h @created_by_name %></td>
     <td><%=h l new_wo.updated_at, :format => :medium %></td>
     <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(new_wo.id) )%>
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(new_wo.id)) %>
@@ -55,3 +58,62 @@
   </tr>
 <% end %>
 </table>
+<br>
+<br>
+<br>
+<h1>Assigned Work Orders</h1>
+<table >
+  <tr>
+    <th><%= "WO #" %></th>
+    <th><%= "Subject" %></th>
+    <th><%= "Description" %></th>
+    <th><%= "Priority" %></th>
+    <th><%= "Created at" %></th>
+    <th><%= "Created by" %></th>
+    <th><%= "Last Updated" %></th>
+    <th><%= "Actions" %></th>
+  </tr>
+
+
+<% @assigned_work_orders.each do |assigned_wo| %>
+      <!--mytodo - add row color shading by css and based on priority-->
+  <tr align="left"
+      <% if assigned_wo.priority_list_id == 1 %>
+          class="priority_low"
+        <% else %>
+    <% if assigned_wo.priority_list_id == 2 %>
+          class="priority_normal"
+       <% else %>
+      <% if assigned_wo.priority_list_id == 3 %>
+          class="priority_high"
+      <% else %>
+  <% if assigned_wo.priority_list_id == 4 %>
+          class="priority_urgent"
+      <% else %>
+ <% if assigned_wo.priority_list_id == 5 %>
+          class="priority_critical"
+      <% else %>
+  <% if assigned_wo.priority_list_id > 5 %>
+      class=""
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+       >
+    <td><%= link_to(assigned_wo.id, assigned_wo) %></td>
+    <td><%=h assigned_wo.subject %></td>
+    <td><%=h assigned_wo.description %></td>
+    <td><%=h assigned_wo.priority_list.name %></td>
+    <td><%=h l assigned_wo.created_at, :format => :medium %></td>
+    <td><%=h assigned_wo.created_by %></td>
+    <td><%=h l assigned_wo.updated_at, :format => :medium %></td>
+    <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>
+        <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(assigned_wo.id)) %>
+        <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), work_order_path(assigned_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
+    </td>
+  </tr>
+<% end %>
+</table>
+    </div>
