--- a/app/views/work_orders/edit.html.erb
+++ b/app/views/work_orders/edit.html.erb
@@ -18,10 +18,10 @@
 <% semantic_form_for(@work_order) do |f| %>
       <% f.inputs do %>
         <%= f.input :subject, :label => (t "workorder.subject") %>
-        <%= f.input :status, :label => (t "workorder.subject") %>
+        <%= f.input :status, :label => (t "workorder.status") %>
+        <%= f.input :assigned_to, :as => :select, :collection => User.find(:all, :conditions => "roles_mask < 5" )  %>
         <%= f.input :description, :label => (t "workorder.details")%>
         <%= f.input :priority_list, :label => (t "workorder.priority") %>
-        <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.id} %>
         <%= f.input :updated_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
       <% end %>
 <%= f.buttons %>
@@ -36,7 +36,6 @@
         <%= f.input :resolution, :label => (t "workorder.resolution") %>
         <%= f.input :closed, :label => (t "workorder.details") %>
         <%= f.input :priority_list, :label => (t "workorder.priority") %>
-        <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.id} %>
         <%= f.input :updated_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
       <% end %>
 <%= f.buttons %>
