--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -3,12 +3,13 @@
 <h1>New Work Orders</h1>
 
 <div id="top_float_right">
-  <%= link_to(image_tag('add.png',:title => [t "workorder.t_add_new"]), new_work_order_path) %><%= link_to [t "workorder.t_add_new"], new_work_order_path %>
+  <%= link_to(image_tag('add.png',:title => [t "workorder.t_add_new"]), users_path) %><%= link_to [t "workorder.t_add_new"], users_path %>
 </div>
 <div id=index_table>
 <table >
   <tr>
     <th><%= "WO #" %></th>
+    <th><%= "Client" %></th>
     <th><%= "Subject" %></th>
     <th><%= "Description" %></th>
     <th><%= "Priority" %></th>
@@ -45,12 +46,14 @@
       <% end %>
        >
     <td><%= link_to(new_wo.id, new_wo) %></td>
+    <td><%= link_to(new_wo.user.username, user_path(new_wo.user_id)) %></td>
     <td><%=h new_wo.subject %></td>
     <td><%=h new_wo.description %></td>
     <td><%=h new_wo.priority_list.name %></td>
     <td><%=h l new_wo.created_at, :format => :medium %></td>
-    <td><%=h @created_by_name %></td>
+    <td><%=h new_wo.created_by %></td>
     <td><%=h l new_wo.updated_at, :format => :medium %></td>
+
     <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(new_wo.id) )%>
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(new_wo.id)) %>
         <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), work_order_path(new_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
@@ -65,12 +68,14 @@
 <table >
   <tr>
     <th><%= "WO #" %></th>
+    <th><%= "Client" %></th>
     <th><%= "Subject" %></th>
     <th><%= "Description" %></th>
     <th><%= "Priority" %></th>
     <th><%= "Created at" %></th>
     <th><%= "Created by" %></th>
     <th><%= "Last Updated" %></th>
+    <th><%= "Assigned To" %></th>
     <th><%= "Actions" %></th>
   </tr>
 
@@ -103,12 +108,14 @@
       <% end %>
        >
     <td><%= link_to(assigned_wo.id, assigned_wo) %></td>
+    <td><%= link_to(assigned_wo.user_id, assigned_wo) %></td>
     <td><%=h assigned_wo.subject %></td>
     <td><%=h assigned_wo.description %></td>
     <td><%=h assigned_wo.priority_list.name %></td>
     <td><%=h l assigned_wo.created_at, :format => :medium %></td>
     <td><%=h assigned_wo.created_by %></td>
     <td><%=h l assigned_wo.updated_at, :format => :medium %></td>
+    <td><%= assigned_wo.assigned_to %></td>
     <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(assigned_wo.id)) %>
         <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), work_order_path(assigned_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
