--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -11,11 +11,12 @@
 
 <div id="sc1" class="tabcontent">
 
+
 <% semantic_form_for(@work_order) do |f| %>
       <% f.inputs do %>
         <%= f.input :user_id, :as => :hidden ,:input_html => {:value => @user_id.id } %>
         <%= f.input :subject, :label => (t "workorder.subject") %>
-        <%= f.input :description, :label => (t "workorder.details")%>
+        <%= f.input :description, :label => (t "workorder.details"), :input_html => {:class => "mceEditor", :width => "150"}%>
         <%= f.input :priority_list, :label => (t "workorder.priority") %>
         <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
         <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
