--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -1,12 +1,22 @@
 <!-- mytodo - add I18n labels and names-->
-
-<h1>New Work Orders</h1>
-
+ <h1>Work Orders</h1>
 <div id="top_float_right">
   <%= link_to(image_tag('add.png',:title => [t "workorder.t_add_new"]), users_path) %><%= link_to [t "workorder.t_add_new"], users_path %>
 </div>
-<div id=index_table>
-<table width="100%">
+<div id="ddtabs1" class="basictab" >
+<ul>
+<li><a href="#new" rel="sc1">New</a></li>
+<li><a href="#assigned" rel="sc2">Assigned</a></li>
+<li><a href="#on_hold" rel="sc3">On Hold</a></li>
+<li><a href="#closed" rel="sc4">Closed</a></li>
+</ul>
+</div>
+<div id="index_table">
+<div class="tabcontainer">
+
+<div id="sc1" class="tabcontent"  style="padding:10px 10px 10px 10px">
+<h1>New Work Orders</h1>
+<table>
   <tr>
     <th><%= "WO #" %></th>
     <th><%= "Client" %></th>
@@ -54,16 +64,16 @@
     <td align="center"><%=h new_wo.created_by %></td>
     <td><%=h l new_wo.updated_at, :format => :medium %></td>
 
-    <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(new_wo.id) )%>
-        <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(new_wo.id)) %>
+    <td width="70"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(new_wo.id) )%>&nbsp;
+        <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(new_wo.id)) %>&nbsp;
         <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), work_order_path(new_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
     </td>
   </tr>
 <% end %>
 </table>
-<br>
-<br>
-<br>
+
+</div>
+<div id="sc2" class="tabcontent"  style="padding:10px 10px 10px 10px">
 <h1>Assigned Work Orders</h1>
 <table width="100%" >
   <tr>
@@ -123,4 +133,128 @@
   </tr>
 <% end %>
 </table>
+</div>
+<div id="sc3" class="tabcontent"  style="padding:10px 10px 10px 10px">
+<h1>Work Orders on HOLD</h1>
+<table width="100%" >
+  <tr>
+    <th><%= "WO #" %></th>
+    <th><%= "Client" %></th>
+    <th><%= "Subject" %></th>
+    <th><%= "Description" %></th>
+    <th><%= "Priority" %></th>
+    <th><%= "Created at" %></th>
+    <th><%= "Created by" %></th>
+    <th><%= "Last Updated" %></th>
+    <th><%= "Assigned To" %></th>
+    <th><%= "Actions" %></th>
+  </tr>
+
+
+<% @on_hold_work_orders.each do |on_hold| %>
+      <!--mytodo - add row color shading by css and based on priority-->
+  <tr align="left"
+      <% if on_hold.priority_list_id == 1 %>
+          class="priority_low"
+        <% else %>
+    <% if on_hold.priority_list_id == 2 %>
+          class="priority_normal"
+       <% else %>
+      <% if on_hold.priority_list_id == 3 %>
+          class="priority_high"
+      <% else %>
+  <% if on_hold.priority_list_id == 4 %>
+          class="priority_urgent"
+      <% else %>
+ <% if on_hold.priority_list_id == 5 %>
+          class="priority_critical"
+      <% else %>
+  <% if on_hold.priority_list_id > 5 %>
+      class=""
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+       >
+    <td><%= link_to(on_hold.id, on_hold) %></td>
+    <td><%= link_to(on_hold.user.username, user_path(on_hold.user_id)) %></td>
+    <td><%=h on_hold.subject %></td>
+    <td><%=h on_hold.description %></td>
+    <td><%=h on_hold.priority_list.name %></td>
+    <td><%=h l on_hold.created_at, :format => :medium %></td>
+    <td><%=h on_hold.created_by %></td>
+    <td><%=h l on_hold.updated_at, :format => :medium %></td>
+    <td><%= on_hold.assigned_to %></td>
+    <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(on_hold.id) )%>
+        <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(on_hold.id)) %>
+        <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), work_order_path(on_hold.id), :confirm => 'Are you sure?', :method => :delete ) %>
+    </td>
+  </tr>
+<% end %>
+</table>
+</div>
+<div id="sc4" class="tabcontent"  style="padding:10px 10px 10px 10px">
+<h1>Assigned Work Orders</h1>
+<table width="95%" >
+  <tr>
+    <th><%= "WO #" %></th>
+    <th><%= "Client" %></th>
+    <th><%= "Subject" %></th>
+    <th><%= "Description" %></th>
+    <th><%= "Priority" %></th>
+    <th><%= "Created at" %></th>
+    <th><%= "Created by" %></th>
+    <th><%= "Last Updated" %></th>
+    <th><%= "Assigned To" %></th>
+    <th><%= "Actions" %></th>
+  </tr>
+
+
+<% @assigned_work_orders.each do |assigned_wo| %>
+      <!--mytodo - add row color shading by css and based on priority-->
+  <tr align="left"
+      <% if assigned_wo.priority_list_id == 1 %>
+          class="priority_low"
+        <% else %>
+    <% if assigned_wo.priority_list_id == 2 %>
+          class="priority_normal"
+       <% else %>
+      <% if assigned_wo.priority_list_id == 3 %>
+          class="priority_high"
+      <% else %>
+  <% if assigned_wo.priority_list_id == 4 %>
+          class="priority_urgent"
+      <% else %>
+ <% if assigned_wo.priority_list_id == 5 %>
+          class="priority_critical"
+      <% else %>
+  <% if assigned_wo.priority_list_id > 5 %>
+      class=""
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+      <% end %>
+       >
+    <td><%= link_to(assigned_wo.id, assigned_wo) %></td>
+    <td><%= link_to(assigned_wo.user.username, user_path(assigned_wo.user_id)) %></td>
+    <td><%=h assigned_wo.subject %></td>
+    <td><%=h assigned_wo.description %></td>
+    <td><%=h assigned_wo.priority_list.name %></td>
+    <td><%=h l assigned_wo.created_at, :format => :medium %></td>
+    <td><%=h assigned_wo.created_by %></td>
+    <td><%=h l assigned_wo.updated_at, :format => :medium %></td>
+    <td><%= assigned_wo.assigned_to %></td>
+    <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>
+        <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(assigned_wo.id)) %>
+        <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), work_order_path(assigned_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
+    </td>
+  </tr>
+<% end %>
+</table>
+</div>
+</div>
     </div>
