--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -1,7 +1,4 @@
-<h1>New work_order for <%= @user_id.username %></h1>
 <!--mytodo - heaps to fix up here....add tabs and all fields required. Also i18n labels and headings-->
-
-
 <div id="ddtabs1" class="basictab">
 <ul>
 <li><a href="#<%= t "workorder.tab_menu_basic_name"  %>" rel="sc1"><%= (t "workorder.tab_menu_basic") %></a></li>
@@ -17,7 +14,7 @@
       <% f.inputs do %>
         <%= f.input :user_id, :as => :hidden ,:input_html => {:value => @user_id.id } %>
         <%= f.input :subject, :label => (t "workorder.subject") %>
-        <%= f.input :description, :label => (t "workorder.details"), :input_html => {:class => "mceEditor", :width => "150"}%>
+        <%= f.input :description, :label => (t "workorder.details"), :input_html => {:width => "150"}%>
         <%= f.input :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
         <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
         <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
